// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Revue $html allows to get the rendered html of the instance 1`] = `
"<div>
  <h1>Welcome Grace Hopper</h1> 
  <p class=\\"description\\">Default description!</p> 
  <button>Transform Name</button>
</div>"
`;

exports[`Revue $html changed data is reflected in the snapshot 1`] = `
"<div>
  <h1>Welcome Grace Hopper</h1> 
  <p class=\\"description\\">Something Different</p> 
  <button>Transform Name</button>
</div>"
`;
